Adjusting build for openmrs-core 2.4 and 2.5