@@ -20,6 +20,7 @@
 		<openmrs.version>1.9.0</openmrs.version>
 		<properties.file />
 		<mvp.file>mvp/openmrs_concepts_1.6.5_20120525.xml</mvp.file>
+		<mvp.step>0</mvp.step>
 		<script.file />
 		<db.url>jdbc:mysql://localhost:3306/liquibaserunner?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8</db.url>
 		<db.user>root</db.user>
@@ -62,8 +63,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.0.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 
@@ -102,7 +103,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.10</version>
 				<configuration>
-					<argLine>-Xmx4g -XX:MaxPermSize=1024m</argLine>
+					<argLine>-Xmx4g</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
